--- a/index.html
+++ b/index.html
@@ -5,9 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gantari:wght@100&display=swap" rel="stylesheet">
     <title>Masum Portfolio</title>
 </head>
 <body>
-    
+     
+     <section class="top-banner">
+
+<div class="half-width">
+<h1>Welcome To </h1>
+<h2> <span class="orange-color">Masum Rana</span> World!</h2>
+<h3>Lorem ipsum dolor sit amet adipisicing.</h3>
+<p class="paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus omnis in animi, eius architecto minus, hic, vitae voluptates tempore ducimus quia. Inventore quae eligendi voluptates!</p>
+<button><a href="#">HERE ME</a></button>
+</div>
+
+<div class="half-width">
+    <img src="/images/my-bg2 (1) - Copy.png" alt="">
+</div>
+
+     </section>
+
+
+
+ 
+
 </body>
 </html>
