this is my first project

--- a/index.html
+++ b/index.html
@@ -28,6 +28,24 @@
 
      </section>
 
+     <section class="middle-banner">
+<div class="drem">
+    <img src="/images/my-bg - Copy - Copy.png" alt="">
+</div> 
+
+<div class="drem">
+    <h1>Dream Big</h1>
+    <h3>Become a web developer</h3>
+    <p class="paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse deleniti perspiciatis at facilis quas reprehenderit odit tempore neque, quaerat, obcaecati voluptates nostrum voluptatem suscipit numquam voluptas ad dolorem. Atque, sunt.</p>
+    <button class="button2"><a href="#">DOWNLOAD RESUME</a></button>
+</div>
+
+<div class="style-img">
+
+     </div>
+
+     </section>
+
 
 
  
